# asdex

./: .gitignore  CLAUDE.md  README.md  TODO.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/skills/add-handler/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/pr/: SKILL.md
.github/workflows/: benchmarks.yml  ci.yml  docs.yml
docs/: CLAUDE.md  index.md
docs/explanation/: coloring.md  sparsity-detection.md
docs/how-to/: hessians.md  jacobians.md
docs/reference/: coloring.md  data-structures.md  hessian.md  index.md  jacobian.md  sparsity.md
docs/stylesheets/: extra.css
docs/tutorials/: getting-started.md
src/asdex/: __init__.py  _display.py  coloring.py  decompression.py  detection.py  pattern.py  verify.py
src/asdex/_interpret/: CLAUDE.md  __init__.py  _broadcast.py  _commons.py  _concatenate.py  _cond.py  _conv.py  _dot_general.py  _dynamic_slice.py  _elementwise.py  _gather.py  _indexing.py  _pad.py  _reduce.py  _reduction.py  _reshape.py  _rev.py  _scan.py  _scatter.py  _select.py  _slice.py  _sort.py  _split.py  _tile.py  _top_k.py  _transpose.py  _while.py
src/detex/: __init__.py  _propagate.py  coloring.py  decompression.py  detection.py
src/detex/_propagate/: __init__.py  _commons.py  _indexing.py
tests/: CLAUDE.md  conftest.py  test_array_ops.py  test_benchmarks.py  test_coloring.py  test_control_flow.py  test_conv.py  test_decompression.py  test_detection.py  test_diffrax.py  test_jacobian_sparsity.py  test_multidim.py  test_pattern.py  test_propagate_internals.py  test_reductions.py  test_scalar.py  test_sympy.py  test_verify.py  test_vmap.py
tests/_interpret/: test_associative_scan.py  test_cond.py  test_conv.py  test_dot_general.py  test_dynamic_indexing.py  test_dynamic_slice.py  test_elementwise.py  test_gather.py  test_indexing.py  test_internals.py  test_nested_jaxpr.py  test_pad.py  test_platform_index.py  test_reduce.py  test_reduce_and.py  test_reduction.py  test_reshape.py  test_rev.py  test_scan.py  test_scatter.py  test_select.py  test_sort.py  test_top_k.py  test_while.py
tests/_propagate/: test_conv.py  test_indexing.py  test_internals.py  test_reduction.py
