[project]
name = "asdex"
version = "0.1.0"
description = "Jacobian sparsity detection for JAX"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Adrian Hill", email = "gh@adrianhill.de" },
]
keywords = [
    "jax",
    "automatic-differentiation",
    "sparsity",
    "jacobian",
    "scientific-computing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/adrhill/asdex"
Repository = "https://github.com/adrhill/asdex"
Issues = "https://github.com/adrhill/asdex/issues"

[dependency-groups]
dev = [
    "flax>=0.10.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-benchmark>=5.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "sympy>=1.13.0",
    "ty>=0.0.1a6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asdex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "elementwise: simple element-wise operations",
    "array_ops: array manipulation (slice, concat, reshape)",
    "control_flow: conditional operations (where, select)",
    "reduction: reduction operations (sum, max, prod)",
    "vmap: batched/vmapped operations",
    "coloring: row coloring algorithm tests",
    "jacobian: sparse Jacobian computation tests",
    "hessian: Hessian sparsity detection and computation",
    "fallback: documents conservative fallback behavior",
    "bug: documents known bugs",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.14"
